- adding prototype support for interactive matching of source words to the corresponding words in the aligned translation (when in learner mode) - improving buggy handling of mouseover highlighting of parallel aligned text

--- a/basic-reader/trunk/skin/alpheios-site-text.css
+++ b/basic-reader/trunk/skin/alpheios-site-text.css
@@ -48,3 +48,22 @@
     margin-bottom: 2em;
 }
 
+.upLink {
+    display: none;
+
+}
+
+.alpheios-next-prev a {
+    padding-left: .25em;
+    padding-right: .25em;
+
+}
+
+.stdfooter hr {
+    display: none;
+}
+
+.rights_info {
+    background-color: white !important;
+    font-size: small;
+}
